feat: add sign up and sign in
