# internal/models/user.go
@@ -1,0 +1,14 @@
+package models
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        uint
+	Name      string
+	Email     string
+	Password  string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
